data/collection/fixes/descriptions/scala/scala-6745
Using auxiliary constructors in a class with explicitly typed self references doesn't compile. Seems like it expects a constructor without any parameters.
```scala
trait Foo
class Bar(val i: Int) {
  self: Foo =>
  def this() = this(0)
}
```
```scala
wat.scala:4: error: too many arguments for constructor Predef: ()object Predef
  def this() = this(0)
               ^
one error found
```